# ChangeLog for media-video/gv4l
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/gv4l/ChangeLog,v 1.5 2004/06/25 00:41:23 agriffis Exp $

  22 Apr 2004; David Holm <dholm@gentoo.org> gv4l-2.2.3.ebuild:
  Added to ~ppc.

*gv4l-2.2.3 (22 Apr 2004)

  22 Apr 2004; Joel Martin <kanaka@gentoo.org> gv4l-2.2.3.ebuild:
  Bump revision to 2.2.3

  21 Apr 2004; Joel Martin <kanaka@gentoo.org> gv4l-2.2.2.ebuild:
  Updates from btowe@gbis.com and warder@warder.ath.cx

*gv4l-2.2.2 (20 Apr 2004)

  20 Apr 2004; Joel Martin <kanaka@gentoo.org> gv4l-2.2.2.ebuild:
  New ebuild submitted by guaka@303.nu in bug #28835
