@@ -1,6 +1,8 @@
+MD5 b272192d12a025ac9db3dadf89a2dbf7 ChangeLog 791
+MD5 68df2849a228b6c6bd2e66d1ef4f559b gv4l-2.2.4.ebuild 703
+MD5 9ef4af14dad87b03fde8e43f19e08d26 metadata.xml 225
 MD5 15369429f81a9cfe2e410d901e7d6527 gv4l-2.2.3.ebuild 705
 MD5 b1a0152979d3b1733b6a5fed4d2a8554 gv4l-2.2.2.ebuild 700
-MD5 32fbc8390ac878f1360bd97cd4e1800d ChangeLog 677
-MD5 9ef4af14dad87b03fde8e43f19e08d26 metadata.xml 225
 MD5 812d0fb52a086ff9e2d3fe6f57bb6fc3 files/digest-gv4l-2.2.2 62
 MD5 31f57c47a768c1d98a6788b57d2022ca files/digest-gv4l-2.2.3 62
+MD5 e06e37a83937cec38fd418afa2771b8e files/digest-gv4l-2.2.4 62
